[package]
name = "cloud"
version = "0.1.0"
edition = "2024"
authors = ["dijikey"]
license = "MIT"
repository = "https://github.com/dijikey/cloud"

[dependencies]
zxcmath = {git = "https://github.com/dijikey/zxcmath.git"}
anyhow = "1.0.99"
pixels = "0.13.0"
winit = "0.28.7"
libloading = "0.6.3"
image = "0.25.8"

[[example]]
name = "sandfall"
path = "examples/sandfall.rs"